--- a/pigs/pom.xml
+++ b/pigs/pom.xml
@@ -34,6 +34,11 @@
           <artifactId>junit</artifactId>
           <version>4.10</version>
         </dependency>
+        <dependency>
+          <groupId>jline</groupId>
+          <artifactId>jline</artifactId>
+          <version>2.10</version>
+        </dependency>
     </dependencies>
 
     <repositories>
