--- a/leader-pigs/pom.xml
+++ b/leader-pigs/pom.xml
@@ -119,6 +119,11 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.github.harshal.distos.PigsRunner</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
                 <executions>
                     <execution>
